--- a/src/autodeploy/config.properties
+++ b/src/autodeploy/config.properties
@@ -15,7 +15,7 @@ golden.config.file.list=logback.xml
 auto.download.sona.build=False
 sona.user.name=yanyang.xie
 #sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-sona.user.passwd=Vicky***$
+sona.user.passwd=Vicky123$
 download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex
