--- a/src/autodeploy/core_vex/config.properties
+++ b/src/autodeploy/core_vex/config.properties
@@ -11,7 +11,7 @@ core.vex.server.list=54.169.6.129
 golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
-auto.download.sona.build=False
+auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 download.command.prefix=/Users/xieyanyang/py27/bin/activate
