--- a/src/autodeploy/vex_ui/config.properties
+++ b/src/autodeploy/vex_ui/config.properties
@@ -2,11 +2,10 @@
 user=root
 public.key=/Users/xieyanyang/work/ttbj/ttbj-keypair.pem
 #password=beijing
-port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-core.vex.server.list=54.169.6.129
+vex.ui.server.list=54.169.6.129
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -17,11 +16,11 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex
+project.name=vex-ui
 project.version=2.8.0-SNAPSHOT
 project.extension.name=release.zip
-build.local.file.name=vex.zip
+build.local.file.name=vex-ui.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-changes.properties
+changes.file.name=vex-ui-changes.properties
