Fix bug in vex director deployment

--- a/src/autodeploy/vex_director/config.properties
+++ b/src/autodeploy/vex_director/config.properties
@@ -26,4 +26,4 @@ build.local.file.name=vex-director.zip
 #https.proxy=
 changes.file.name=vex-director-changes.properties
 
-run.golden.setup.script=True
+run.golden.setup.script=False
