--- a/src/autodeploy/core_vex/vex-changes.properties
+++ b/src/autodeploy/core_vex/vex-changes.properties
@@ -5,7 +5,7 @@ vex.frontend.linear.url=http://172.31.9.149/live
 vex.frontend.vod.url=http://172.31.9.149/vod
 vex.frontend.cdvr.url=http://172.31.9.149/cdvr
 vex.frontend.channelStore.url=http://172.31.9.149/channelStore
-vex.director.url=http://172.31.9.149/vex-director
+#vex.director.url=http://172.31.9.149/vex-director
 adm.protocol=comcast-p1
 opportunity.type.midroll=private:midRoll
 vinz.endpoint=http://172.31.13.47:8080/vinz
