add config for redis

--- a/src/autodeploy/core_vex/longevity/vex-changes.properties
+++ b/src/autodeploy/core_vex/longevity/vex-changes.properties
@@ -21,3 +21,5 @@ ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
 
 vex.distributed.services.path=/tt/vex/dservices_longevity
 cluster.zkBasePath=/vex_cluster_longevity
+
+psn.enabled=false
