--- a/src/autodeploy/core_vex/perf/vex-changes.properties
+++ b/src/autodeploy/core_vex/perf/vex-changes.properties
@@ -22,3 +22,5 @@ ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
 
 cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
+
+psn.enabled=false
