--- a/src/autodeploy/core_vex/redis/vex-changes.properties
+++ b/src/autodeploy/core_vex/redis/vex-changes.properties
@@ -23,4 +23,5 @@ ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
 cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
 
-psn.enabled=false
+redis.enabled=true
+redis.address=redis://172.31.3.66:6379,redis://172.31.3.67:6379,redis://172.31.3.68:6379,redis://172.31.3.69:6379,redis://172.31.3.70:6379,redis://172.31.3.71:6379
