--- a/src/operation/config.properties
+++ b/src/operation/config.properties
@@ -66,3 +66,5 @@ ecc.spark.dir=/usr/local/spark/sbin
 
 mongo.server.host=172.31.8.196
 mongo.script=/root/mongo-delete.js
+
+redis.server.host=172.31.3.66,172.31.3.67,172.31.3.68,172.31.3.69.70,172.31.3.71
