--- a/src/operation/config.properties
+++ b/src/operation/config.properties
@@ -68,3 +68,4 @@ mongo.server.host=172.31.8.196
 mongo.script=/root/mongo-delete.js
 
 redis.server.host=172.31.3.66,172.31.3.67,172.31.3.68,172.31.3.69,172.31.3.70,172.31.3.71
+redis.db.file=/var/lib/redis/dump.rdb
