add config for rong

--- a/src/autodeploy/core_vex/rong/config.properties
+++ b/src/autodeploy/core_vex/rong/config.properties
@@ -1,29 +1,29 @@
 #ssh
 user=root
-public.key=/root/ttbj-keypair.pem
-#password=beijing
-port=22
+#public.key=/root/ttbj-keypair.pem
+password=_Thi5_T3chnolo9y
+port=22000
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
-# Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.origin.manager.server.list=172.31.7.148,172.31.7.149
+#core.vex.server.list=192.168.3.100,192.168.2.111
+core.vex.server.list=121.201.3.100,121.201.2.111
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
-auto.download.sona.build=True
+auto.download.sona.build=False
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
+download.command.prefix=/Users/wangrong/py27/bin/activate
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-origin-manager
+project.name=vex
 project.version=2.8.0-SNAPSHOT
 project.extension.name=release.zip
-build.local.file.name=vex-origin-manager.zip
+build.local.file.name=vex.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-origin-manager-changes.properties
 
-run.golden.setup.script=False
+changes.file.name=vex-changes.properties
