--- a/src/autodeploy/core_vex/config.properties
+++ b/src/autodeploy/core_vex/config.properties
@@ -1,12 +1,12 @@
 #ssh
 user=root
-public.key=/Users/xieyanyang/work/ttbj/ttbj-keypair.pem
+public.key=/root/ttbj-keypair.pem
 #password=beijing
-port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-core.vex.server.list=54.169.6.129
+core.vex.server.list=172.31.13.47,172.31.13.48
+#core.vex.server.list=172.31.13.47,172.31.13.48,172.31.14.172,172.31.14.173,172.31.14.174,172.31.14.175
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -15,7 +15,7 @@ golden.config.file.list=logback.xml
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-download.command.prefix=/Users/xieyanyang/py27/bin/activate
+#download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex
 project.version=2.8.0-SNAPSHOT
@@ -24,4 +24,5 @@ build.local.file.name=vex.zip
 
 #http.proxy=
 #https.proxy=
+
 changes.file.name=vex-changes.properties
