--- a/src/autodeploy/vex_origin_manager/rong/config.properties
+++ b/src/autodeploy/vex_origin_manager/rong/config.properties
@@ -1,12 +1,12 @@
 #ssh
 user=root
-public.key=/root/ttbj-keypair.pem
-#password=beijing
-port=22
+#public.key=/root/ttbj-keypair.pem
+password=_Thi5_T3chnolo9y
+port=22000
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
-# Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.origin.manager.server.list=172.31.7.148,172.31.7.149
+#vex.origin.manager.server.list=192.168.5.40,192.168.5.91
+vex.origin.manager.server.list=121.201.5.40,121.201.5.91
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -15,7 +15,7 @@ golden.config.file.list=logback.xml
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-#download.command.prefix=/Users/xieyanyang/py27/bin/activate
+download.command.prefix=/Users/wangrong/py27/bin/activate
 
 project.name=vex-origin-manager
 project.version=2.8.0-SNAPSHOT
@@ -26,4 +26,4 @@ build.local.file.name=vex-origin-manager.zip
 #https.proxy=
 changes.file.name=vex-origin-manager-changes.properties
 
-run.golden.setup.script=False
+run.golden.setup.script=True
