change one switch

--- a/src/autodeploy/core_vex/rong/config.properties
+++ b/src/autodeploy/core_vex/rong/config.properties
@@ -12,7 +12,7 @@ core.vex.server.list=121.201.3.100,121.201.2.111
 golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
-auto.download.sona.build=False
+auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 download.command.prefix=/Users/wangrong/py27/bin/activate
