auto restart: for rong

--- a/src/autodeploy/vex_director/rong/config.properties
+++ b/src/autodeploy/vex_director/rong/config.properties
@@ -6,7 +6,7 @@ port=22000
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 #vex.fe.server.list=192.168.3.243,192.168.2.91
-vex.fe.server.list=121.201.3.243,121.201.2.91
+vex.director.server.list=121.201.3.243,121.201.2.91
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
