--- a/src/autodeploy/vex_origin_manager/longevity/config.properties
+++ b/src/autodeploy/vex_origin_manager/longevity/config.properties
@@ -17,7 +17,7 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-origin-manager
+project.name=vex-app-origin-manager
 project.version=2.8.0-SNAPSHOT
 project.extension.name=release.zip
 build.local.file.name=vex-origin-manager.zip
