put golden config file name of vex compontent into deployment configuration

--- a/src/autodeploy/core_vex/rong/config.properties
+++ b/src/autodeploy/core_vex/rong/config.properties
@@ -27,3 +27,5 @@ build.local.file.name=vex.zip
 #https.proxy=
 
 changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-golden.properties
+project.config.default.file.name=vex.properties
