--- a/src/autodeploy/vex_ui/longevity/config.properties
+++ b/src/autodeploy/vex_ui/longevity/config.properties
@@ -25,3 +25,5 @@ build.local.file.name=vex-ui.zip
 #https.proxy=
 
 changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-ui-golden.properties
+project.config.default.file.name=vex-ui.properties
