--- a/src/autodeploy/vex_ui/perf/config.properties
+++ b/src/autodeploy/vex_ui/perf/config.properties
@@ -17,6 +17,7 @@ sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-ui
+project.internal.name=vex-ui
 project.version=2.8.0-SNAPSHOT
 project.extension.name=release.zip
 build.local.file.name=vex-ui.zip
@@ -25,3 +26,5 @@ build.local.file.name=vex-ui.zip
 #https.proxy=
 
 changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-ui-golden.properties
+project.config.default.file.name=vex-ui.properties
