--- a/src/autodeploy/core_vex/longevity/config.properties
+++ b/src/autodeploy/core_vex/longevity/config.properties
@@ -25,3 +25,5 @@ build.local.file.name=vex.zip
 #https.proxy=
 
 changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-golden.properties
+project.config.default.file.name=vex.properties
