--- a/src/autodeploy/vex_director/rong/config.properties
+++ b/src/autodeploy/vex_director/rong/config.properties
@@ -25,5 +25,7 @@ build.local.file.name=vex-director.zip
 #http.proxy=
 #https.proxy=
 changes.file.name=vex-director-changes.properties
+project.config.golden.file.name=vex-director-golden.properties
+project.config.default.file.name=vex-director.properties
 
 run.golden.setup.script=False
