--- a/src/autodeploy/vex_fe/config.properties
+++ b/src/autodeploy/vex_fe/config.properties
@@ -25,3 +25,5 @@ build.local.file.name=vex-frontend.zip
 #http.proxy=
 #https.proxy=
 changes.file.name=vex-frontend-changes.properties
+project.config.golden.file.name=vex-frontend-golden.properties
+project.config.default.file.name=vex-frontend.properties
