--- a/src/autodeploy/vex_fe/perf/config.properties
+++ b/src/autodeploy/vex_fe/perf/config.properties
@@ -24,3 +24,5 @@ build.local.file.name=vex-frontend.zip
 #http.proxy=
 #https.proxy=
 changes.file.name=vex-frontend-changes.properties
+project.config.golden.file.name=vex-frontend-golden.properties
+project.config.default.file.name=vex-frontend.properties
