--- a/src/autodeploy/vex_origin_manager/redis/config.properties
+++ b/src/autodeploy/vex_origin_manager/redis/config.properties
@@ -25,5 +25,7 @@ build.local.file.name=vex-origin-manager.zip
 #http.proxy=
 #https.proxy=
 changes.file.name=vex-origin-manager-changes.properties
+project.config.golden.file.name=vex-origin-manager-golden.properties
+project.config.default.file.name=vex-origin-manager.properties
 
 run.golden.setup.script=False
