--- a/src/autodeploy/vex_ui/perf/config.properties
+++ b/src/autodeploy/vex_ui/perf/config.properties
@@ -25,6 +25,6 @@ build.local.file.name=vex-ui.zip
 #http.proxy=
 #https.proxy=
 
-changes.file.name=vex-changes.properties
+changes.file.name=vex-ui-changes.properties
 project.config.golden.file.name=vex-ui-golden.properties
 project.config.default.file.name=vex-ui.properties
