--- a/src/autodeploy/core_vex/perf-er/config.properties
+++ b/src/autodeploy/core_vex/perf-er/config.properties
@@ -2,11 +2,11 @@
 user=root
 public.key=/root/ttbj-keypair.pem
 #password=beijing
-port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.origin.manager.server.list=172.31.14.142,172.31.14.143
+core.vex.server.list=172.31.13.47,172.31.13.48
+#core.vex.server.list=172.31.13.47,172.31.13.48,172.31.14.172,172.31.14.173,172.31.14.174,172.31.14.175
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -17,15 +17,14 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-origin-manager
-project.version=2.8.0-SNAPSHOT
+project.name=vex
+project.version=2.8.0-ER2
 project.extension.name=release.zip
-build.local.file.name=vex-origin-manager.zip
+build.local.file.name=vex.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-origin-manager-changes.properties
-project.config.golden.file.name=vex-origin-manager-golden.properties
-project.config.default.file.name=vex-origin-manager.properties
 
-run.golden.setup.script=False
+changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-golden.properties
+project.config.default.file.name=vex.properties
