--- a/src/autodeploy/vex_director/perf-er/config.properties
+++ b/src/autodeploy/vex_director/perf-er/config.properties
@@ -6,7 +6,7 @@ port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.origin.manager.server.list=172.31.14.142,172.31.14.143
+vex.director.server.list=172.31.14.142,172.31.14.143
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -17,15 +17,15 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-origin-manager
-project.version=2.8.0-SNAPSHOT
+project.name=vex-director
+project.version=2.8.0-ER2
 project.extension.name=release.zip
-build.local.file.name=vex-origin-manager.zip
+build.local.file.name=vex-director.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-origin-manager-changes.properties
-project.config.golden.file.name=vex-origin-manager-golden.properties
-project.config.default.file.name=vex-origin-manager.properties
+changes.file.name=vex-director-changes.properties
+project.config.golden.file.name=vex-director-golden.properties
+project.config.default.file.name=vex-director.properties
 
-run.golden.setup.script=False
+run.golden.setup.script=True
