--- a/src/autodeploy/core_vex/rong/config.properties
+++ b/src/autodeploy/core_vex/rong/config.properties
@@ -18,7 +18,7 @@ sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 download.command.prefix=/Users/wangrong/py27/bin/activate
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-app-core
+project.name=vex
 project.version=2.8.0-SNAPSHOT
 project.extension.name=release.zip
 build.local.file.name=vex.zip
