--- a/src/autodeploy/vex_fe/hq/config.properties
+++ b/src/autodeploy/vex_fe/hq/config.properties
@@ -15,8 +15,8 @@ vex.fe.server.list=121.201.5.38,121.201.5.39
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-#download.command.prefix=/usr/local/lib/py27/bin/python2.7/bin/activate
-download.command.prefix=/Users/xieyanyang/py27/bin/activate
+download.command.prefix=/usr/local/lib/py27/bin/python2.7/bin/activate
+#download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-frontend
 project.version=2.8.0-SNAPSHOT
