change redis cluster

--- a/src/autodeploy/core_vex/redis/vex-changes.properties
+++ b/src/autodeploy/core_vex/redis/vex-changes.properties
@@ -25,4 +25,4 @@ vex.distributed.services.path=/tt/vex/dservices_perf
 
 redis.enabled=true
 #redis.address=redis://172.31.3.28:6379,redis://172.31.3.29:6379,redis://172.31.3.30:6379,redis://172.31.3.31:6379,redis://172.31.3.32:6379,redis://172.31.3.33:6379
-redis.address=redis://172.31.2.122:6379,redis://172.31.2.123:6379,redis://172.31.2.124:6379,redis://172.31.2.125:6379,redis://172.31.2.126:6379,redis://172.31.2.127:6379,redis://172.31.2.128:6379,redis://172.31.2.129:6379,,redis://172.31.2.130:6379,,redis://172.31.2.131:6379
+redis.address=redis://172.31.2.122:6379,redis://172.31.2.123:6379,redis://172.31.2.124:6379,redis://172.31.2.125:6379,redis://172.31.2.126:6379,redis://172.31.2.127:6379,redis://172.31.2.128:6379,redis://172.31.2.129:6379,redis://172.31.2.130:6379,redis://172.31.2.131:6379
