--- a/src/autodeploy/core_vex/hq/config.properties
+++ b/src/autodeploy/core_vex/hq/config.properties
@@ -9,7 +9,7 @@ port=22000
 core.vex.server.list=121.201.5.29,121.201.5.30
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
