--- a/src/autodeploy/vex_ui/hq/config.properties
+++ b/src/autodeploy/vex_ui/hq/config.properties
@@ -9,14 +9,14 @@ port=22000
 vex.ui.server.list=121.201.5.29,121.201.5.30
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-download.command.prefix=/usr/local/lib/py27/bin/activate
-#download.command.prefix=/Users/xieyanyang/py27/bin/activate
+#download.command.prefix=/usr/local/lib/py27/bin/activate
+download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-ui
 project.version=2.8.0-SNAPSHOT
