Operation: add origin mananger

--- a/src/operation/config.properties
+++ b/src/operation/config.properties
@@ -14,7 +14,7 @@ core.vex.server.list=172.31.13.47,172.31.13.48
 vex.fe.server.list=172.31.13.17,172.31.13.18
 
 vex.director.server.list=172.31.14.142,172.31.14.143
-#vex.origin.manager.server.list=172.31.14.142,172.31.14.143
+vex.origin.manager.server.list=172.31.14.142,172.31.14.143
 memcached.server.list=172.31.1.163,172.31.1.164,172.31.1.165,172.31.1.166,172.31.1.167
 #memcached.server.list=172.31.1.163,172.31.1.164,172.31.1.165,172.31.1.166,172.31.1.167,172.31.4.20,172.31.4.21
 zookeeper.server.list=172.31.1.163,172.31.1.164,172.31.1.165,172.31.1.166,172.31.1.167
