support only update war file

--- a/src/autodeploy/core_vex/config.properties
+++ b/src/autodeploy/core_vex/config.properties
@@ -5,11 +5,11 @@ public.key=/root/ttbj-keypair.pem
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-core.vex.server.list=172.31.13.47,172.31.13.48
+core.vex.server.list=172.31.6.208,172.31.6.215
 #core.vex.server.list=172.31.13.47,172.31.13.48,172.31.14.172,172.31.14.173,172.31.14.174,172.31.14.175
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
@@ -28,3 +28,5 @@ build.local.file.name=vex.zip
 changes.file.name=vex-changes.properties
 project.config.golden.file.name=vex-golden.properties
 project.config.default.file.name=vex.properties
+
+run.golden.setup.script=False
