--- a/src/autodeploy/vex_director/config.properties
+++ b/src/autodeploy/vex_director/config.properties
@@ -1,6 +1,6 @@
 #ssh
 user=root
-public.key=/Users/xieyanyang/work/ttbj/ttbj-keypair.pem
+public.key=/root/ttbj-keypair.pem
 #password=beijing
 port=22
 
@@ -9,13 +9,13 @@ port=22
 vex.director.server.list=54.169.44.141
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-download.command.prefix=/Users/xieyanyang/py27/bin/activate
+#download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-director
 project.version=2.8.0-SNAPSHOT
