--- a/src/autodeploy/vex_origin_manager/config.properties
+++ b/src/autodeploy/vex_origin_manager/config.properties
@@ -1,21 +1,21 @@
 #ssh
 user=root
-public.key=/Users/xieyanyang/work/ttbj/ttbj-keypair.pem
+public.key=/root/ttbj-keypair.pem
 #password=beijing
 port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.origin.manager.server.list=54.169.44.141
+vex.origin.manager.server.list=172.31.6.216
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-download.command.prefix=/Users/xieyanyang/py27/bin/activate
+#download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-origin-manager
 project.version=2.8.0-SNAPSHOT
