--- a/src/autodeploy/vex_ui/config.properties
+++ b/src/autodeploy/vex_ui/config.properties
@@ -1,21 +1,21 @@
 #ssh
 user=root
-public.key=/Users/xieyanyang/work/ttbj/ttbj-keypair.pem
+public.key=/root/ttbj-keypair.pem
 #password=beijing
 port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.ui.server.list=54.169.6.129
+vex.ui.server.list=172.31.6.216
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
 sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
-download.command.prefix=/Users/xieyanyang/py27/bin/activate
+#download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-ui
 project.version=2.8.0-SNAPSHOT
@@ -27,3 +27,5 @@ build.local.file.name=vex-ui.zip
 changes.file.name=vex-ui-changes.properties
 project.config.golden.file.name=vex-ui-golden.properties
 project.config.default.file.name=vex-ui.properties
+
+run.golden.setup.script=False
