--- a/src/operation/config.properties
+++ b/src/operation/config.properties
@@ -67,6 +67,8 @@ ecc.spark.dir=/usr/local/spark/sbin
 mongo.server.host=172.31.8.196
 mongo.script=/root/mongo-delete.js
 
+linear.ad.insertion.script.dir=/root/linear
+
 #redis.server.host=172.31.3.28,172.31.3.29,172.31.3.30,172.31.3.31,172.31.3.32,172.31.3.33
 redis.server.host=172.31.2.122,172.31.2.123,172.31.2.124,172.31.2.125,172.31.2.126,172.31.2.127,172.31.2.128,172.31.2.129,172.31.2.130,172.31.2.131
 redis.db.file=/var/lib/redis/dump.rdb
