--- a/src/autodeploy/core_vex/config.properties
+++ b/src/autodeploy/core_vex/config.properties
@@ -29,4 +29,4 @@ changes.file.name=vex-changes.properties
 project.config.golden.file.name=vex-golden.properties
 project.config.default.file.name=vex.properties
 
-run.golden.setup.script=False
+#run.golden.setup.script=False
