change config for rong and hq

--- a/src/autodeploy/vex_origin_manager/hq/config.properties
+++ b/src/autodeploy/vex_origin_manager/hq/config.properties
@@ -9,7 +9,7 @@ port=22000
 vex.origin.manager.server.list=121.201.2.104,121.201.2.105
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
