--- a/src/autodeploy/vex_fe/rong/config.properties
+++ b/src/autodeploy/vex_fe/rong/config.properties
@@ -9,7 +9,7 @@ port=22000
 vex.fe.server.list=121.201.3.243,121.201.2.91
 
 # Upload golden configurations into tomcat/lib
-golden.config.file.list=logback.xml
+#golden.config.file.list=logback.xml
 
 # Whether to download latest build from SONA automatic, 'True' is to download latest build.
 auto.download.sona.build=True
