--- a/src/autodeploy/core_vex/redis/vex-changes.properties
+++ b/src/autodeploy/core_vex/redis/vex-changes.properties
@@ -24,5 +24,4 @@ cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
 
 redis.enabled=true
-#redis.address=redis://172.31.3.28:6379,redis://172.31.3.29:6379,redis://172.31.3.30:6379,redis://172.31.3.31:6379,redis://172.31.3.32:6379,redis://172.31.3.33:6379
-redis.address=redis://172.31.2.122:6379,redis://172.31.2.123:6379,redis://172.31.2.124:6379,redis://172.31.2.125:6379,redis://172.31.2.126:6379,redis://172.31.2.127:6379,redis://172.31.2.128:6379,redis://172.31.2.129:6379,redis://172.31.2.130:6379,redis://172.31.2.131:6379
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
