--- a/src/autodeploy/core_vex/perf/vex-changes.properties
+++ b/src/autodeploy/core_vex/perf/vex-changes.properties
@@ -24,3 +24,6 @@ cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
 
 psn.enabled=false
+
+redis.enabled=true
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
