--- a/src/autodeploy/vex_director/perf/vex-director-changes.properties
+++ b/src/autodeploy/vex_director/perf/vex-director-changes.properties
@@ -4,3 +4,6 @@ view-expander.root=172.31.15.41/vex
 memcached.server-list=172.31.1.163:11211,172.31.1.164:11211,172.31.1.165:11211,172.31.1.166:11211,172.31.1.167:11211
 cluster.ZookeeperServer=172.31.1.163:2181,172.31.1.164:2181,172.31.1.165:2181,172.31.1.166:2181,172.31.1.167:2181
 ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
+
+redis.enabled=true
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
