--- a/src/autodeploy/vex_fe/perf/vex-frontend-changes.properties
+++ b/src/autodeploy/vex_fe/perf/vex-frontend-changes.properties
@@ -6,3 +6,6 @@ view-expander.root=172.31.15.41/vex
 cluster.zkHosts=172.31.1.163:2181,172.31.1.164:2181,172.31.1.165:2181,172.31.1.166:2181,172.31.1.167:2181
 cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
+
+redis.enabled=true
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
