change redis file location

--- a/src/operation/config.properties
+++ b/src/operation/config.properties
@@ -70,5 +70,5 @@ mongo.script=/root/mongo-delete.js
 linear.ad.insertion.script.dir=/root/linear
 
 redis.server.host=172.31.8.70,172.31.8.71,172.31.8.72,172.31.8.73,172.31.8.74,172.31.8.75
-#redis.server.host=172.31.2.122,172.31.2.123,172.31.2.124,172.31.2.125,172.31.2.126,172.31.2.127,172.31.2.128,172.31.2.129,172.31.2.130,172.31.2.131
-redis.db.file=/var/lib/redis/dump.rdb
+#redis.db.file=/var/lib/redis/dump.rdb
+redis.db.file=/var/lib/redis/*.aof
