--- a/src/autodeploy/vex_director/perf/vex-director-changes.properties
+++ b/src/autodeploy/vex_director/perf/vex-director-changes.properties
@@ -6,4 +6,4 @@ cluster.ZookeeperServer=172.31.1.163:2181,172.31.1.164:2181,172.31.1.165:2181,17
 ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
 
 redis.enabled=true
-redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379,redis://172.31.1.43:6379,redis://172.31.13.60:6379,redis://172.31.7.240:6379,redis://172.31.9.220:6379
