--- a/src/autodeploy/vex_fe/perf/vex-frontend-changes.properties
+++ b/src/autodeploy/vex_fe/perf/vex-frontend-changes.properties
@@ -8,4 +8,4 @@ cluster.zkBasePath=/vex_cluster_perf
 vex.distributed.services.path=/tt/vex/dservices_perf
 
 redis.enabled=true
-redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379
+redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379,redis://172.31.1.43:6379,redis://172.31.13.60:6379,redis://172.31.7.240:6379,redis://172.31.9.220:6379
