while copy war, need rm project dir

--- a/src/autodeploy/vex_ui/perf/config.properties
+++ b/src/autodeploy/vex_ui/perf/config.properties
@@ -28,3 +28,5 @@ build.local.file.name=vex-ui.zip
 changes.file.name=vex-ui-changes.properties
 project.config.golden.file.name=vex-ui-golden.properties
 project.config.default.file.name=vex-ui.properties
+
+run.golden.setup.script=False
