--- a/src/operation/longevity/config.properties
+++ b/src/operation/longevity/config.properties
@@ -10,16 +10,9 @@ tomcat.log.clean=True
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # VEX component
 core.vex.server.list=172.31.1.52,172.31.1.53
-#core.vex.server.list=172.31.1.52,172.31.1.53,172.31.10.6,172.31.10.8,172.31.10.9,172.31.10.10
-#vex.fe.server.list=172.31.7.148,172.31.7.149
-#vex.director.server.list=172.31.7.148,172.31.7.149
-#vex.origin.manager.server.list=172.31.7.148,172.31.7.149
-
 vex.fe.server.list=172.31.1.7,172.31.1.8
-#vex.fe.server.list=172.31.7.148,172.31.7.149
-#vex.fe.server.list=172.31.7.148,172.31.7.149
-#vex.director.server.list=172.31.7.148,172.31.7.149
-#vex.origin.manager.server.list=172.31.7.148,172.31.7.149
+vex.director.server.list=172.31.1.7,172.31.1.8
+vex.origin.manager.server.list=172.31.1.7,172.31.1.8
 
 memcached.server.list=172.31.4.203,172.31.4.204,172.31.4.205,172.31.4.206,172.31.4.207
 
