--- a/src/autodeploy/vex_director/longevity/config.properties
+++ b/src/autodeploy/vex_director/longevity/config.properties
@@ -6,7 +6,7 @@ port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.director.server.list=172.31.1.7,172.31.1.8
+vex.director.server.list=172.31.12.119,172.31.9.236
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -28,4 +28,4 @@ changes.file.name=vex-director-changes.properties
 project.config.golden.file.name=vex-director-golden.properties
 project.config.default.file.name=vex-director.properties
 
-run.golden.setup.script=False
+run.golden.setup.script=True
