change longevity environment

--- a/src/autodeploy/core_vex/longevity/config.properties
+++ b/src/autodeploy/core_vex/longevity/config.properties
@@ -5,7 +5,8 @@ public.key=/root/ttbj-keypair.pem
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-core.vex.server.list=172.31.1.52,172.31.1.53
+#core.vex.server.list=172.31.1.52,172.31.1.53
+core.vex.server.list=172.31.13.23,172.31.15.144
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
