--- a/src/operation/longevity/config.properties
+++ b/src/operation/longevity/config.properties
@@ -9,7 +9,8 @@ tomcat.log.clean=True
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # VEX component
-core.vex.server.list=172.31.1.52,172.31.1.53
+#core.vex.server.list=172.31.1.52,172.31.1.53
+core.vex.server.list=172.31.13.23,172.31.15.144
 vex.fe.server.list=172.31.1.7,172.31.1.8
 vex.director.server.list=172.31.12.119,172.31.9.236
 vex.origin.manager.server.list=172.31.12.119,172.31.9.236
