Add new benchmark environment config which is named YY

--- a/src/autodeploy/vex_fe/yy/config.properties
+++ b/src/autodeploy/vex_fe/yy/config.properties
@@ -5,8 +5,7 @@ public.key=/root/ttbj-keypair.pem
 port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
-# Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.director.server.list=172.31.14.142,172.31.14.143
+vex.fe.server.list=172.31.3.214,172.31.9.100
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -17,15 +16,13 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-app-director
-project.version=2.9.0-ER4
+project.name=vex-app-frontend
+project.version=2.9.0-SNAPSHOT
 project.extension.name=release.zip
-build.local.file.name=vex-director.zip
+build.local.file.name=vex-frontend.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-director-changes.properties
-project.config.golden.file.name=vex-director-golden.properties
-project.config.default.file.name=vex-director.properties
-
-run.golden.setup.script=True
+changes.file.name=vex-frontend-changes.properties
+project.config.golden.file.name=vex-frontend-golden.properties
+project.config.default.file.name=vex-frontend.properties
