--- a/src/autodeploy/vex_origin_manager/yy/config.properties
+++ b/src/autodeploy/vex_origin_manager/yy/config.properties
@@ -18,7 +18,7 @@ sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
 project.name=vex-app-origin-manager
-project.version=2.9.0-ER4
+project.version=2.9.0-SNAPSHOT
 project.extension.name=release.zip
 build.local.file.name=vex-origin-manager.zip
 
