--- a/src/autodeploy/core_vex/yy/config.properties
+++ b/src/autodeploy/core_vex/yy/config.properties
@@ -2,10 +2,11 @@
 user=root
 public.key=/root/ttbj-keypair.pem
 #password=beijing
-port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
-vex.fe.server.list=172.31.13.17,172.31.13.18
+# Such as ssh port is 22000, then server should be 172.31.3.241:22000
+core.vex.server.list=172.31.5.50,172.31.8.50
+#core.vex.server.list=172.31.0.239,172.31.13.48,172.31.14.172,172.31.14.173,172.31.14.174,172.31.14.175
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -16,13 +17,14 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-app-frontend
-project.version=2.9.0-ER4
+project.name=vex-app-core
+project.version=2.9.0-SNAPSHOT
 project.extension.name=release.zip
-build.local.file.name=vex-frontend.zip
+build.local.file.name=vex.zip
 
 #http.proxy=
 #https.proxy=
-changes.file.name=vex-frontend-changes.properties
-project.config.golden.file.name=vex-frontend-golden.properties
-project.config.default.file.name=vex-frontend.properties
+
+changes.file.name=vex-changes.properties
+project.config.golden.file.name=vex-golden.properties
+project.config.default.file.name=vex.properties
