--- a/src/autodeploy/vex_director/yy/config.properties
+++ b/src/autodeploy/vex_director/yy/config.properties
@@ -2,11 +2,11 @@
 user=root
 public.key=/root/ttbj-keypair.pem
 #password=beijing
+port=22
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-core.vex.server.list=172.31.0.239,172.31.13.48
-#core.vex.server.list=172.31.0.239,172.31.13.48,172.31.14.172,172.31.14.173,172.31.14.174,172.31.14.175
+vex.director.server.list=172.31.3.214,172.31.9.100
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -17,14 +17,15 @@ sona.user.name=yanyang.xie
 sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 #download.command.prefix=/Users/xieyanyang/py27/bin/activate
 
-project.name=vex-app-core
-project.version=2.9.0-ER4
+project.name=vex-app-director
+project.version=2.9.0-SNAPSHOT
 project.extension.name=release.zip
-build.local.file.name=vex.zip
+build.local.file.name=vex-director.zip
 
 #http.proxy=
 #https.proxy=
+changes.file.name=vex-director-changes.properties
+project.config.golden.file.name=vex-director-golden.properties
+project.config.default.file.name=vex-director.properties
 
-changes.file.name=vex-changes.properties
-project.config.golden.file.name=vex-golden.properties
-project.config.default.file.name=vex.properties
+run.golden.setup.script=True
