--- a/src/autodeploy/vex_ui/yy/config.properties
+++ b/src/autodeploy/vex_ui/yy/config.properties
@@ -5,7 +5,7 @@ public.key=/root/ttbj-keypair.pem
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # Such as ssh port is 22000, then server should be 172.31.3.241:22000
-vex.ui.server.list=172.31.13.48
+vex.ui.server.list=172.31.3.127
 
 # Upload golden configurations into tomcat/lib
 golden.config.file.list=logback.xml
@@ -18,7 +18,7 @@ sona.user.passwd=97c7a8255ee940ce0dcc596fd82eacf4
 
 project.name=vex-app-ui
 project.internal.name=vex-ui
-project.version=2.9.0-ER4
+project.version=2.9.0-SNAPSHOT
 project.extension.name=release.zip
 build.local.file.name=vex-ui.zip
 
