not deploy director and origin manager

--- a/src/operation/yy/config.properties
+++ b/src/operation/yy/config.properties
@@ -21,15 +21,15 @@ origin.server.host=172.31.1.191
 acs.server.host=172.31.1.191
 
 #ads
-ads.simulator.host=172.31.11.51
+ads.simulator.host=172.31.11.51,172.31.1.115
 ads.simlator.dir=/root/adssimulator-jetty-1.1.0-SNAPSHOT
 
 #cns
-cns.simulator.host=172.31.8.216
+cns.simulator.host=172.31.1.115
 cns.simulator.dir=/root/cns-simulator-jetty-2.0.0-SNAPSHOT
 
 #content router
-content.router.simulator.host=172.31.13.202
+content.router.simulator.host=172.31.13.202,,172.31.1.115
 content.router.simulator.dir=/root/crsimulator-jetty-1.1.0-SNAPSHOT
 
 #origin simulator
@@ -41,7 +41,7 @@ layer7.server.host=
 spotlink.core.server.host=
 
 #origin proxy
-origin.proxy.simulator.host=172.31.3.252,172.31.5.0,172.31.2.141
+origin.proxy.simulator.host=172.31.3.252,172.31.5.0,172.31.1.187
 origin.proxy.dir=/root/origin-proxy-1.1.0-SNAPSHOT
 origin.proxy.batch.operation.dir=/root/origin-proxy-operation
 
