--- a/src/autodeploy/core_vex/yy/vex-changes.properties
+++ b/src/autodeploy/core_vex/yy/vex-changes.properties
@@ -1,17 +1,13 @@
-mongo.host=172.31.3.127:27017
-memcached.server-list=172.31.2.33:11211,172.31.1.190:11211,172.31.14.31:11211,172.31.5.155:11211,172.31.5.69:11211
-cluster.zkHosts=172.31.2.33:2181,172.31.1.190:2181,172.31.14.31:2181,172.31.5.155:2181,172.31.5.69:2181
-vex.frontend.linear.url=http://172.31.1.29/live
-vex.frontend.vod.url=http://172.31.1.29/vod
-vex.frontend.cdvr.url=http://172.31.1.29/cdvr
-vex.frontend.channelStore.url=http://172.31.1.29/channelStore
+mongo.host=172.31.0.202:27017
+memcached.server-list=172.31.13.252:11211,172.31.14.4:11211,172.31.14.180:11211,172.31.14.203:11211,172.31.15.38:11211
+cluster.zkHosts=172.31.13.252:2181,172.31.14.4:2181,172.31.14.180:2181,172.31.14.203:2181,172.31.15.38
 adm.protocol=comcast-p1
 opportunity.type.midroll=private:midRoll
-vinz.endpoint=http://172.31.3.127:8080/vinz
+vinz.endpoint=http://172.31.0.202:8080/vinz
 originserver.contentrouter.enabled=true
-cns.url=http://172.31.8.216:8085/cns/RecordingInfo?locator=%s&deliveryNetwork=IP&contentEncoding=MPEG
+cns.url=http://172.31.10.125:8085/cns/RecordingInfo?locator=%s&deliveryNetwork=IP&contentEncoding=MPEG
 counter.dump.interval=60
-origin.manager.servlet.url=http://172.31.7.87/vex-origin-manager/fetchOrigin
+origin.manager.servlet.url=http://172.31.13.174/vex-origin-manager/fetchOrigin
 
 # for endall
 endAll.enable.for.linear=true
@@ -24,5 +20,5 @@ vex.distributed.services.path=/tt/vex/dservices_yy_perf
 
 psn.enabled=false
 
-redis.enabled=true
+redis.enabled=false
 redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379,redis://172.31.1.43:6379,redis://172.31.13.60:6379,redis://172.31.7.240:6379,redis://172.31.9.220:6379
