--- a/src/autodeploy/vex_fe/yy/vex-frontend-changes.properties
+++ b/src/autodeploy/vex_fe/yy/vex-frontend-changes.properties
@@ -1,12 +1,12 @@
 #changes of vex.properties.
 callback.http.url=http://localhost:8091/callback
-view-expander.root=172.31.6.198/vex
+view-expander.root=172.31.8.195/vex
 
-memcached.server-list=172.31.2.33:11211,172.31.1.190:11211,172.31.14.31:11211,172.31.5.155:11211,172.31.5.69:11211
-cluster.zkHosts=172.31.2.33:2181,172.31.1.190:2181,172.31.14.31:2181,172.31.5.155:2181,172.31.5.69:2181
+memcached.server-list=172.31.13.252:11211,172.31.14.4:11211,172.31.14.180:11211,172.31.14.203:11211,172.31.15.38:11211
+cluster.zkHosts=172.31.13.252:2181,172.31.14.4:2181,172.31.14.180:2181,172.31.14.203:2181,172.31.15.38
 
 cluster.zkBasePath=/vex_cluster_yy_perf
 vex.distributed.services.path=/tt/vex/dservices_yy_perf
 
-redis.enabled=true
+redis.enabled=false
 redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379,redis://172.31.1.43:6379,redis://172.31.13.60:6379,redis://172.31.7.240:6379,redis://172.31.9.220:6379
