add yy_perf config

--- a/src/operation/yy/config.properties
+++ b/src/operation/yy/config.properties
@@ -9,31 +9,31 @@ tomcat.log.clean=True
 
 # Server list. if ssh port is not 22 by default, need append it after IP.
 # VEX component
-core.vex.server.list=172.31.5.50,172.31.8.50
-vex.fe.server.list=172.31.2.77,172.31.15.218
-vex.director.server.list=172.31.3.214,172.31.9.100
+core.vex.server.list=172.31.1.91,172.31.1.129
+vex.fe.server.list=172.31.1.144,172.31.1.226
+vex.director.server.list=172.31.4.126,172.31.5.112
 
-memcached.server.list=172.31.2.33,172.31.1.190,172.31.14.31,172.31.5.155,172.31.5.69
-zookeeper.server.list=172.31.2.33,172.31.1.190,172.31.14.31,172.31.5.155,172.31.5.69
+memcached.server.list=172.31.13.252,172.31.14.4,172.31.14.180,172.31.14.203,172.31.15.38
+zookeeper.server.list=172.31.13.252,172.31.14.4,172.31.14.180,172.31.14.203,172.31.15.38
 
 #origin server
-origin.server.host=172.31.1.191
-acs.server.host=172.31.1.191
+origin.server.host=172.31.5.164
+acs.server.host=172.31.5.164
 
 #ads
-ads.simulator.host=172.31.11.51,172.31.1.115
+ads.simulator.host=172.31.7.144,172.31.10.125
 ads.simlator.dir=/root/adssimulator-jetty-1.1.0-SNAPSHOT
 
 #cns
-cns.simulator.host=172.31.1.115
+cns.simulator.host=172.31.10.125
 cns.simulator.dir=/root/cns-simulator-jetty-2.0.0-SNAPSHOT
 
 #content router
-content.router.simulator.host=172.31.13.202,,172.31.1.115
+content.router.simulator.host=172.31.14.47,172.31.10.125
 content.router.simulator.dir=/root/crsimulator-jetty-1.1.0-SNAPSHOT
 
 #origin simulator
-origin.simulator.host=172.31.4.93
+origin.simulator.host=172.31.13.131
 origin.simulator.dir=/root/originsimulator-jetty-1.1.0-SNAPSHOT
 
 #SLR
@@ -41,27 +41,27 @@ layer7.server.host=
 spotlink.core.server.host=
 
 #origin proxy
-origin.proxy.simulator.host=172.31.3.252,172.31.5.0,172.31.1.187
+origin.proxy.simulator.host=172.31.4.183,172.31.3.235,172.31.13.179
 origin.proxy.dir=/root/origin-proxy-1.1.0-SNAPSHOT
 origin.proxy.batch.operation.dir=/root/origin-proxy-operation
 
 #cdvr simulator
-cdvr.simulator.host=172.31.1.191
+cdvr.simulator.host=172.31.5.164
 cdvr.simulator.dir=/root/cdvr-simulator-jetty-2.0.0-SNAPSHOT
 
 #vod simulator
-vod.simulator.host=172.31.1.191
+vod.simulator.host=172.31.5.164
 vod.simulator.dir=/root/vod-simulator-jetty-1.1.0-SNAPSHOT
 
 #ecc.zookeeper
-ecc.zookeeper.host=172.31.31.52
+ecc.zookeeper.host=172.31.13.252
 ecc.zookeeper.dir=/usr/local/zookeeper-3.4.6/bin
 
 #ecc.spark
 ecc.spark.server.host=172.31.1.168
 ecc.spark.dir=/usr/local/spark/sbin
 
-mongo.server.host=172.31.3.127
+mongo.server.host=172.31.0.202
 mongo.script=/root/mongo-delete.js
 
 #redis.server.host=172.31.3.28,172.31.3.29,172.31.3.30,172.31.3.31,172.31.3.32,172.31.3.33
