add redis config for yy perf test

--- a/src/autodeploy/vex_director/yy/vex-director-changes.properties
+++ b/src/autodeploy/vex_director/yy/vex-director-changes.properties
@@ -5,5 +5,5 @@ memcached.server-list=172.31.2.33:11211,172.31.1.190:11211,172.31.14.31:11211,17
 cluster.zkHosts=172.31.2.33:2181,172.31.1.190:2181,172.31.14.31:2181,172.31.5.155:2181,172.31.5.69:2181
 ecc.endpoint=ecc-kafka-1:9092,ecc-kafka-2:9092
 
-redis.enabled=true
-redis.address=redis://172.31.8.70:6379,redis://172.31.8.71:6379,redis://172.31.8.72:6379,redis://172.31.8.73:6379,redis://172.31.8.74:6379,redis://172.31.8.75:6379,redis://172.31.1.43:6379,redis://172.31.13.60:6379,redis://172.31.7.240:6379,redis://172.31.9.220:6379
+redis.enabled=false
+redis.address=redis://172.31.13.68:6379,redis://172.31.5.234:6379,redis://172.31.13.15:6379,redis://172.31.15.25:6379,redis://172.31.11.105:6379,redis://172.31.13.89:6379,redis://172.31.1.104:6379,redis://172.31.9.49:6379,redis://172.31.12.167:6379,redis://172.31.8.135:6379
